card spacing fixes

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -220,7 +220,7 @@ a.button--primary:hover {
 }
 
 .doc details.section-cards-toggle {
-  margin: 0.5rem 0 1rem;
+  margin: 0;
 }
 
 .doc details.section-cards-toggle > summary {
@@ -232,7 +232,7 @@ a.button--primary:hover {
   font-size: 1.5em;
   font-weight: var(--heading-font-weight);
   line-height: 1.3;
-  margin: 1rem -1rem 0.75rem;
+  margin: 0 -1rem 0;
   padding: 0.4rem 1rem 0.1rem;
   list-style: none;
 }
